--- a/AsthmaFriend/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/AsthmaFriend/en.lproj/MainStoryboard_iPhone.storyboard
@@ -4,36 +4,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Score-->
-        <scene sceneID="UmF-FS-1pl">
-            <objects>
-                <viewController title="Score" id="J3U-Vk-epA" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="iH2-K1-cFZ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="406-2I-QIZ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3Mw-kJ-qHF" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-62" y="341"/>
-        </scene>
-        <!--View Controller - Blow-->
-        <scene sceneID="bri-9p-RY2">
-            <objects>
-                <viewController title="Blow" id="8hF-zw-1Uf" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="TiL-JP-Ixw">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="Co9-rP-jTL"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="36c-zc-NiU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1086" y="317"/>
-        </scene>
         <!--Initial View Controller-->
         <scene sceneID="tbl-HS-WFC">
             <objects>
@@ -52,7 +22,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="DlR-Df-Pdx" kind="push" id="8sJ-vv-GKV"/>
+                                    <segue destination="DlR-Df-Pdx" kind="modal" id="8sJ-vv-GKV"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Put your thumb on the button below to authenticate" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="F5i-Bj-DAi">
@@ -83,52 +53,150 @@
             <objects>
                 <tabBarController definesPresentationContext="YES" id="DlR-Df-Pdx" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="7mF-J5-UUB"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="YgF-gT-xux">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="8hF-zw-1Uf" kind="relationship" relationship="viewControllers" id="dXq-sQ-h9s"/>
-                        <segue destination="J3U-Vk-epA" kind="relationship" relationship="viewControllers" id="qik-Um-EAg"/>
-                        <segue destination="3cz-Wc-8eO" kind="relationship" relationship="viewControllers" id="abM-V3-3gc"/>
-                        <segue destination="BNW-OS-F3O" kind="relationship" relationship="viewControllers" id="C21-bT-xya"/>
+                        <segue destination="B3Z-K3-m40" kind="relationship" relationship="viewControllers" id="PiO-qG-YRA"/>
+                        <segue destination="fBb-9w-kvd" kind="relationship" relationship="viewControllers" id="YuX-Nf-OfJ"/>
+                        <segue destination="Usf-d2-QoQ" kind="relationship" relationship="viewControllers" id="uqn-eu-Ms7"/>
+                        <segue destination="XMk-MI-ys2" kind="relationship" relationship="viewControllers" id="jlE-4i-yBe"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IL9-6x-Ncn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-330" y="-567"/>
         </scene>
-        <!--View Controller - History-->
-        <scene sceneID="ut7-ZV-nsZ">
+        <!--Navigation Controller - Asthma Facts-->
+        <scene sceneID="GB6-BO-YxD">
             <objects>
-                <viewController title="History" id="3cz-Wc-8eO" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="f1y-Da-UEa">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="bkn-6e-b2X"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BzS-Vn-1XQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController title="Asthma Facts" definesPresentationContext="YES" id="B3Z-K3-m40" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Asthma Facts" id="n7Y-me-0w5"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LBO-ag-YKT" userLabel="label">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="HXY-8A-Cgi" kind="relationship" relationship="rootViewController" id="bDq-pz-lB5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ti8-o2-unh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-556" y="327"/>
+            <point key="canvasLocation" x="202" y="-589"/>
         </scene>
-        <!--View Controller - Asthma Facts-->
-        <scene sceneID="e0v-bN-sYI">
+        <!--Blow View-->
+        <scene sceneID="VbJ-nX-3NZ">
             <objects>
-                <viewController title="Asthma Facts" id="BNW-OS-F3O" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wNL-rV-FzE">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                <viewController title="Blow View" id="HXY-8A-Cgi" userLabel="Blow View" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="taR-1U-mON">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="cdb-7w-JHE"/>
+                    <navigationItem key="navigationItem" title="Asthma Facts" id="UGV-Rg-Qih"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="q2D-5Z-klE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KjO-Ss-N2l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="394" y="371"/>
+            <point key="canvasLocation" x="666" y="-577"/>
+        </scene>
+        <!--Navigation Controller - History-->
+        <scene sceneID="ebr-X0-fi0">
+            <objects>
+                <navigationController title="History" definesPresentationContext="YES" id="Usf-d2-QoQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="History" id="Vhj-Tt-bKc"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oFX-Za-3sj" userLabel="label">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Rdf-Ej-cG4" kind="relationship" relationship="rootViewController" id="eRB-Fw-ZoI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vpR-9e-G88" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="166" y="55"/>
+        </scene>
+        <!--Blow View-->
+        <scene sceneID="UJw-oh-HZl">
+            <objects>
+                <viewController title="Blow View" id="Rdf-Ej-cG4" userLabel="Blow View" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bpc-e4-7RR">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="History" id="vf1-Dk-kvn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SRG-AH-rD7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="630" y="67"/>
+        </scene>
+        <!--Navigation Controller - Blow-->
+        <scene sceneID="PHr-3M-sJB">
+            <objects>
+                <navigationController title="Blow" definesPresentationContext="YES" id="fBb-9w-kvd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Blow" id="X6u-ZR-zaP"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5yP-fi-aMr" userLabel="label">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Dou-QZ-xTf" kind="relationship" relationship="rootViewController" id="8fI-PI-lBB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X4O-i1-bGn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="226" y="-1245"/>
+        </scene>
+        <!--Blow View-->
+        <scene sceneID="C5q-cG-T0Z">
+            <objects>
+                <viewController title="Blow View" id="Dou-QZ-xTf" userLabel="Blow View" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bj8-GJ-IEW">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Blow" id="Jn7-QC-97m"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GMO-Me-i2E" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="690" y="-1233"/>
+        </scene>
+        <!--Navigation Controller - Score-->
+        <scene sceneID="FZN-FT-86g">
+            <objects>
+                <navigationController title="Score" definesPresentationContext="YES" id="XMk-MI-ys2" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Score" id="q58-lr-z1U"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Pvc-BL-pXO" userLabel="label">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Ioc-XX-lEJ" kind="relationship" relationship="rootViewController" id="9fA-zY-aLr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w4c-JF-y2b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="150" y="655"/>
+        </scene>
+        <!--Blow View-->
+        <scene sceneID="Oax-U4-oTk">
+            <objects>
+                <viewController title="Blow View" id="Ioc-XX-lEJ" userLabel="Blow View" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hZh-AH-ZHe">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Score" id="hvK-AT-dzX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rhn-Rp-2GX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="614" y="667"/>
         </scene>
     </scenes>
     <classes>
